# Agentic-Insurance

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  download_models.py  pyproject.toml  serve_local_llm.py
alembic/: env.py
alembic/versions/: v0_1.py
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  types.gen.ts  types.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/auth/: guards.tsx
frontend/src/components/chat/: AssistantTurn.tsx  ChatComposer.tsx  MarkdownWithSup.tsx  MessageList.tsx  ProgressTimeline.tsx  SessionSidebar.tsx  UserBubble.tsx  evidence.ts  types.ts
frontend/src/components/citation/: CitationDrawer.tsx  PdfPageViewer.tsx
frontend/src/components/files/: FilePreviewDrawer.tsx  IngestProgress.tsx  UploadDialog.tsx
frontend/src/components/forms/: ChipsField.tsx  CustomerProfileFields.tsx  FileMultiSelect.tsx  FormPrimitives.tsx  customerProfileSchema.ts
frontend/src/components/graph/: GraphCanvas.tsx
frontend/src/components/layout/: LayoutShell.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx
frontend/src/components/workbench/: CitationChipRow.tsx  ProofBoard.tsx  RiskExploreCanvas.tsx  RiskSankeyCanvas.tsx  WorkbenchScaffold.tsx  turn.ts  useWorkbenchStream.ts
frontend/src/hooks/: useFiles.ts  useInView.ts  useSessions.ts
frontend/src/lib/: fetchScheduler.ts  lazyWithRetry.ts  queryClient.ts  sse-types.ts  sse.ts  utils.ts
frontend/src/pages/: ChatPage.tsx  FilesPage.tsx  GraphPage.tsx  GraphSandboxPage.tsx  LoginPage.tsx  NotFoundPage.tsx  PlaceholderPage.tsx  RegisterPage.tsx
frontend/src/pages/admin/: AuditPage.tsx  ConfigPage.tsx  UsersPage.tsx
frontend/src/pages/workbench/: PolicyCalcPage.tsx  ProductsPage.tsx  RiskPredictionPage.tsx  SearchPage.tsx
frontend/src/stores/: auth.ts  citation.ts  config.ts  ingestQueue.ts  session.ts
src/agentic/: __init__.py
src/agentic/agent/: __init__.py  base.py  evidence_bank.py  factory.py  proof_agent.py
src/agentic/agent/prompts/: __init__.py  default.txt  evidence_fs.py  graph_system.py  insurance.py  proof_system.py  rag_business.py  regex_system.py  shell_system.py  system.py  web_system.py
src/agentic/closure/: __init__.py  budget.py  candidate_gap.py  claims.py  closures.py  complete_scan.py  contract.py  finalize.py  inventory.py  obligation.py  plant.py  predicates.py  session.py
src/agentic/core/: __init__.py  config.py  context.py
src/agentic/proof/: __init__.py  errors.py  finalize.py  gate_view.py  handlers.py  plant.py  reconcile.py  spec_builder.py  types.py
src/agentic/proof/closure/: __init__.py  helpers.py  rules.py
src/agentic/proof/evidence/: __init__.py  claim_validator.py  extractors.py  store.py
src/agentic/proof/predicate/: __init__.py  algebra.py  evaluation.py  helpers.py  registry.py
src/agentic/proof/rules/: __init__.py  decomposition.py  repair.py
src/agentic/proof/schema/: __init__.py  compose.py  envelope.py  obligations.py  predicates.py  scope.py  tools.py
src/agentic/proof/score/: __init__.py  registry.py
src/agentic/proof/state/: __init__.py  challenge_store.py  domain_map.py  domain_map_handler.py  obligation_store.py  (+1 more)
src/agentic/tools/: __init__.py  base.py  evfs_sidecar.py  registry.py
src/api/: README.md  __init__.py  auth.py  db.py  deps.py  main.py  models.py  sse.py
src/api/prompts/: __init__.py  rag_business.py
src/api/routes/: admin.py  admin_users.py  audit.py  auth.py  chat.py  files.py  graph.py  insurance.py  search.py  trace.py
src/api/runners/: __init__.py  _tracing.py  _workbench.py  agent_runner.py  claim_runner.py  compare_runner.py  events.py  exclusion_runner.py  fraud_ppr_runner.py  ingestion_runner.py  policy_calc_runner.py  rag_runner.py  recommend_runner.py  regulation_runner.py  risk_predict_runner.py  web_rag_runner.py
src/api/schemas/: __init__.py  admin.py  chat.py  graph.py  insurance.py  search.py  users.py
src/api/services/: chat.py  citation.py  files.py  graph_service.py  history.py  preview.py  search.py  web_rag.py
src/config/: __init__.py  http.py  linear_rag.py  rag.py  settings.py  shared.py
src/config/config_store/: __init__.py  entry.py  schema.py  store.py
src/ingestion/: __init__.py  dbocr_pageassets.py  page_assets.py  page_mode.py
src/ingestion/datasets/: __init__.py  multihop_corpus.py
src/ingestion/index/: __init__.py  _sentence.py  base.py  bm25_tantivy.py  graph_linearrag.py  maintenance.py  text_dense.py  vision_dense.py
src/ingestion/paddle_ocr/: __init__.py  client.py  parser.py  splitter.py
src/model_client/: __init__.py  chat.py  qwen_text_embedding.py  qwen_vl_embedding.py  rerank.py  text_embedding.py  visual_embedding.py  web_search.py
src/pipeline/: __init__.py  parse_and_index.py
src/rag/: __init__.py  aggregate.py  answer.py  pipeline.py  preprocess.py  rerank.py
src/rag/channels/: __init__.py  base.py  bm25.py  graph_ppr.py  regex_scan.py  semantic.py
src/storage/: __init__.py  embedding_store.py  inventory_store.py  page_store.py  passage_store.py  table_row_store.py
src/tracer/: __init__.py  base.py
tests/: test_chain_resolve.py  test_chat_conn_retry.py  test_config_defaults_in_sync.py  test_entity_normalize.py  test_er_resolve.py  test_evidence_fs.py  test_evidence_window.py  test_linear_rag_edge_fixes.py  test_paddle_ocr_client.py  test_risk_predict_runner.py  test_seed_resolution.py  test_spacy_gpu_threaded.py  test_v2_contract.py  test_view_page_multimodal.py  test_workbench_serial_gate.py
tests/e2e/: test_chat_e2e.py  test_config_e2e.py  test_files_e2e.py  test_graph_e2e.py  test_ingest_progress.py  test_insurance_e2e.py  test_insurance_workbench_citations.py  test_web_agent_citations.py
tests/e2e/fixtures/: insurance_defaults.py
tests/invariants/: _fixtures.py  conftest.py  p1_citation_stability.py  p2_rollback_locality.py  p3_structural_monotonicity_and_drift.py  p4_ppr_surface_attribution.py  p5_contamination_radius.py
(+81 files in other folders)
