[project]
name = "agentic"
version = "0.1.0"
description = "Proof-obligation controlled agent for long-document QA"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Dependency policy:
#   - Generation / reranking / embedding go through OpenAI-compatible HTTP APIs.
#   - Local models are NOT allowed except for one carve-out: the GLiNER NER
#     pipeline. GLiNER (multi-v2.1) is an open-set NER that takes natural
#     language label descriptions at runtime, so domain swap = prompt swap (no
#     dictionary). Loading it pulls in torch + transformers transitively;
#     these are accepted ONLY as part of the NER exception. Do not introduce
#     any other local-model runtime (sentence-transformers, accelerate, vllm, …).
dependencies = [
    # HTTP / API clients used by the model clients and PaddleOCR client.
    "requests>=2.28.0",
    "httpx>=0.25.0",
    "openai>=1.40.0",
    # Tokenization and cost accounting in the chat client.
    "tiktoken>=0.7.0",
    # Configs / IO.
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    # Slice large PDFs into ≤50-page batches before submission to the
    # PaddleOCR layout-parsing API.
    "pypdf>=4.0.0",
    # Numerics and columnar storage. scipy.sparse for the graph index;
    # parquet for embedding stores.
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    # numpy>=1.20 deprecated and 1.25 removed np.irr/np.npv/np.pmt/np.pv/np.fv/np.rate;
    # numpy_financial is the upstream successor — pure Python, ~30 KB, brings
    # back the standard actuarial functions the policy-calc workbench leans on.
    # Listed as a top-level dep (not a code_run-only sandbox extra) because the
    # algorithm layer may grow to use it directly for product comparisons too.
    "numpy-financial>=1.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.3.0",
    # Local search / graph backends — no external services like neo4j.
    "python-igraph>=0.11.0",
    "tantivy>=0.26.0",
    "faiss-cpu>=1.8.0",
    # Aho-Corasick multi-pattern string matcher used by the LinearRAG
    # literal-backfill pass (KAG-style "domain mount"). C-implemented; the
    # alternative regex-alternation path scales O(text * patterns) and is
    # noticeably slower once the entity vocabulary grows past ~50.
    "pyahocorasick>=2.1.0",
    # GLiNER multi-v2.1 — open-set NER (BERT-class, mT5 backbone). Takes a
    # natural-language label list at runtime ("product", "term", "law", ...)
    # and returns spans without retraining. Replaces the prior spaCy
    # en/zh _trf + HanLP MTL stack: same VRAM footprint (FP16 ≈ 0.7 GB peak)
    # but 4-20× higher entity recall on domain text (insurance / legal /
    # medical) because the closed OntoNotes / MSRA tagsets miss
    # PRODUCT / TERM / CONCEPT classes. GPU-only by project policy
    # (CPU inference unsupported); the GLiNER weights live in the standard
    # HuggingFace cache (~/.cache/huggingface/hub/), not in STORAGE_PATH.
    "gliner>=0.2.0",
    # Pure-Python sentence boundary disambiguation, 22 langs incl. zh/en,
    # 320 KB. Replaces spaCy's blank+sentencizer for the lightweight
    # passage→sentence split path used by text_dense / maintenance.
    "pysbd>=0.3.4",
    # langdetect drives query-side language routing in src/rag/preprocess.py;
    # not on the NER hot path (NER routes by Han-character regex).
    "langdetect>=1.0.9",
    "ftfy>=6.3.1",
    "opencc-python-reimplemented>=0.1.7",
    "regex>=2026.4.4",
    "babel>=2.18.0",
    "dateparser>=1.4.0",
    "portion>=2.6.1",
    "pydantic>=2.13.3",
    # ---- Web app (src/api/) ------------------------------------------------
    # FastAPI backend that wraps the algorithm layer. SQLite-only; no Redis,
    # no Celery, no broker — single-process app for the demo.
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    # Direct bcrypt (no passlib): passlib is unmaintained and breaks
    # against bcrypt >=4. See api/auth.py for the sha256-then-bcrypt
    # wrapper that bypasses bcrypt's 72-byte input cap.
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.4.0",
    # PDF page rendering for /files/{id}/preview. pypdf only parses text;
    # we need raster output for the file-card thumbnail and the
    # "full-file preview" drawer's pre-render fallback. pypdfium2 is a
    # pure Python wheel (no poppler / no system libs) wrapping Google's
    # PDFium, which is what Chromium ships for in-browser PDF rendering.
    "pypdfium2>=4.30.0",
    "pillow>=12.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/agentic",
    "src/api",
    "src/config",
    "src/ingestion",
    "src/model_client",
    "src/pipeline",
    "src/rag",
    "src/storage",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
# pytest is anchored to ``tests/`` (the canonical home for unit tests).
# Driver scripts under ``scripts/`` are runnable directly with ``python
# scripts/<name>.py`` and do not follow the pytest discovery contract.
# ``norecursedirs`` stops bare ``pytest`` from walking into reference
# subprojects (``projects/arag``, ``projects/LinearRAG``) whose tests
# import modules absent from this repo.
testpaths = ["tests"]
norecursedirs = [
    "projects",
    "local_storage",
    "models",
    ".venv",
    "src",
    "scripts",
    "docs",
]
markers = [
    "live: hits real LLM / Tavily APIs; needs API keys; skipped by default",
    "gpu: requires CUDA + cupy + a resident spaCy trf model on disk; auto-skipped when unavailable",
]
# By default exclude live tests; opt in with ``pytest -m live`` or ``-m ''``.
addopts = "-m 'not live'"
